# adaptive-spectral-rewiring-for-heterogeneous-molecular-graphs

./: .gitignore  CHECKLIST.md  FILES_CREATED.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCORING_IMPROVEMENTS.md  VERIFICATION_CHECKLIST.md  pyproject.toml  requirements.txt  setup_project.py  verify_improvements.py  verify_project.sh
configs/: ablation.yaml  default.yaml
results/: evaluation_metrics.json  predictions_test.csv  results.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_spectral_rewiring_for_heterogeneous_molecular_graphs/: __init__.py
src/adaptive_spectral_rewiring_for_heterogeneous_molecular_graphs/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_spectral_rewiring_for_heterogeneous_molecular_graphs/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_spectral_rewiring_for_heterogeneous_molecular_graphs/models/: __init__.py  components.py  hetero_model.py  model.py
src/adaptive_spectral_rewiring_for_heterogeneous_molecular_graphs/training/: trainer.py
src/adaptive_spectral_rewiring_for_heterogeneous_molecular_graphs/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_spectral.py  test_training.py
